--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,10 @@
 
     <properties>
         <guava.version>14.0.1</guava.version>
+        <hamcrest.version>1.3</hamcrest.version>
         <java.version>7</java.version>
         <jsr305.version>2.0.1</jsr305.version>
+        <junit.version>4.11</junit.version>
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
         <spring.version>3.2.4.RELEASE</spring.version>
     </properties>
@@ -25,6 +27,18 @@
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
             <version>${jsr305.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>${hamcrest.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
