--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+
     <groupId>binkley.hm</groupId>
     <artifactId>blog</artifactId>
     <version>0.1-SNAPSHOT</version>
@@ -65,6 +72,7 @@
         <guava.version>14.0.1</guava.version>
         <hamcrest.version>1.3</hamcrest.version>
         <java.version>7</java.version>
+        <jnr.version>3.0.0</jnr.version>
         <jsr305.version>2.0.1</jsr305.version>
         <junit.version>4.11</junit.version>
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
@@ -114,6 +122,12 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
                 <version>${spring.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.jnr</groupId>
+                <artifactId>jnr-posix</artifactId>
+                <version>${jnr.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
