--- a/xnum/pom.xml
+++ b/xnum/pom.xml
@@ -8,7 +8,7 @@
         <artifactId>blog</artifactId>
         <version>0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>configuration</artifactId>
+    <artifactId>xnum</artifactId>
 
     <dependencies>
         <dependency>
