--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
         <version>7</version>
     </parent>
 
+    <prerequisites>
+        <maven>${maven.version}</maven>
+    </prerequisites>
+
     <groupId>hm.binkley</groupId>
     <artifactId>binkley-blog</artifactId>
     <version>0.1-SNAPSHOT</version>
@@ -62,6 +66,7 @@
         <jsr305.version>2.0.1</jsr305.version>
         <junit.version>4.11</junit.version>
         <logback.version>1.0.13</logback.version>
+        <maven.version>3.1</maven.version>
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
         <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
         <maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
