--- a/guice/pom.xml
+++ b/guice/pom.xml
@@ -17,5 +17,9 @@
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.99soft.guice</groupId>
+            <artifactId>lifegycle</artifactId>
+        </dependency>
     </dependencies>
 </project>
