--- a/pom.xml
+++ b/pom.xml
@@ -56,11 +56,13 @@
 
     <properties>
         <guava.version>14.0.1</guava.version>
+        <guice.version>3.0</guice.version>
         <hamcrest.version>1.3</hamcrest.version>
         <java.version>7</java.version>
         <jnr.version>3.0.0</jnr.version>
         <jsr305.version>2.0.1</jsr305.version>
         <junit.version>4.11</junit.version>
+        <lifegycle.version>0.1</lifegycle.version>
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
         <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
         <maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
@@ -99,6 +101,11 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>binkley-guice</artifactId>
+                <version>${project.version</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>binkley-xnum</artifactId>
                 <version>${project.version</version>
             </dependency>
@@ -107,6 +114,17 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.inject</groupId>
+                <artifactId>guice</artifactId>
+                <version>${guice.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.99soft.guice</groupId>
+                <artifactId>lifegycle</artifactId>
+                <version>${lifegycle.version}</version>
             </dependency>
 
             <dependency>
