--- a/guice/pom.xml
+++ b/guice/pom.xml
@@ -21,5 +21,9 @@
             <groupId>org.99soft.guice</groupId>
             <artifactId>lifegycle</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.kohsuke.metainf-services</groupId>
+            <artifactId>metainf-services</artifactId>
+        </dependency>
     </dependencies>
 </project>
