--- a/guice/pom.xml
+++ b/guice/pom.xml
@@ -28,5 +28,9 @@
             <groupId>org.kohsuke.metainf-services</groupId>
             <artifactId>metainf-services</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-ext</artifactId>
+        </dependency>
     </dependencies>
 </project>
