--- a/guice/pom.xml
+++ b/guice/pom.xml
@@ -32,5 +32,9 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-ext</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.aeonbits.owner</groupId>
+            <artifactId>owner</artifactId>
+        </dependency>
     </dependencies>
 </project>
