--- a/pom.xml
+++ b/pom.xml
@@ -79,8 +79,8 @@
         <maven-jgitflow-plugin.version>1.0-alpha20</maven-jgitflow-plugin.version>
         <maven-release-plugin.version>2.4.1</maven-release-plugin.version>
         <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
+        <owner.version>1.0.5</owner.version>
         <slf4j.version>1.7.5</slf4j.version>
-        <spring.version>3.2.4.RELEASE</spring.version>
     </properties>
 
     <dependencies>
@@ -166,6 +166,12 @@
                 <version>${metainf-services.version}</version>
                 <scope>compile</scope>
                 <optional>true</optional>
+            </dependency>
+
+            <dependency>
+                <groupId>org.aeonbits.owner</groupId>
+                <artifactId>owner</artifactId>
+                <version>${owner.version}</version>
             </dependency>
 
             <dependency>
