--- a/pom.xml
+++ b/pom.xml
@@ -281,6 +281,7 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- TODO: Automate gpg passphrase w/o compromising security -->
             <plugin>
                 <artifactId>maven-gpg-plugin</artifactId>
                 <executions>
