Sample module for jopt-simple.

--- a/guice/pom.xml
+++ b/guice/pom.xml
@@ -36,5 +36,9 @@
             <groupId>org.aeonbits.owner</groupId>
             <artifactId>owner</artifactId>
         </dependency>
+        <dependency>
+            <groupId>net.sf.jopt-simple</groupId>
+            <artifactId>jopt-simple</artifactId>
+        </dependency>
     </dependencies>
 </project>
