--- a/pom.xml
+++ b/pom.xml
@@ -69,17 +69,18 @@
     </modules>
 
     <properties>
-        <guava.version>14.0.1</guava.version>
+        <guava.version>15.0</guava.version>
         <guice.version>3.0</guice.version>
         <hamcrest.version>1.3</hamcrest.version>
-        <java.version>1.7</java.version>
-        <jnr.version>3.0.0</jnr.version>
-        <jsr305.version>2.0.1</jsr305.version>
+        <java.version>1.8</java.version>
+        <jnr.version>3.0.1</jnr.version>
+        <jsr305.version>2.0.2</jsr305.version>
         <junit.version>4.11</junit.version>
         <lifegycle.version>0.2-SNAPSHOT</lifegycle.version>
         <logback.version>1.0.13</logback.version>
         <maven.version>3.1</maven.version>
         <metainf-services.version>1.5</metainf-services.version>
+        <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
         <maven-gpg-plugin.version>1.4</maven-gpg-plugin.version>
         <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
@@ -88,6 +89,7 @@
         <maven-release-plugin.version>2.4.1</maven-release-plugin.version>
         <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
         <owner.version>1.0.5</owner.version>
+        <versions-maven-plugin.version>2.1</versions-maven-plugin.version>
         <slf4j.version>1.7.5</slf4j.version>
     </properties>
 
@@ -204,10 +206,19 @@
                 <version>${maven-jgitflow-plugin.version}</version>
             </plugin>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>${versions-maven-plugin.version}</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>${maven-clean-plugin.version}</version>
+            </plugin>
+            <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <debug/>
+                    <debug>true</debug>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                 </configuration>
