--- a/logging/src/main/resources/osi-logback-styles.properties
+++ b/logging/src/main/resources/osi-logback-styles.properties
@@ -1,1 +1,7 @@
+#
+# This is free and unencumbered software released into the public domain.
+#
+# Please see https://github.com/binkley/binkley/blob/master/LICENSE.md.
+#
+
 standard=%date{yyyy-MM-dd'T'HH:mm:ss.SSS'Z',UTC} %level [%thread] %logger - %message%n
