OSI formatting fixes; test program.

--- a/logging/src/main/resources/osi-logback-styles.properties
+++ b/logging/src/main/resources/osi-logback-styles.properties
@@ -4,4 +4,7 @@
 # Please see https://github.com/binkley/binkley/blob/master/LICENSE.md.
 #
 
-standard=%date{yyyy-MM-dd'T'HH:mm:ss.SSS'Z',UTC} %level [%thread] %logger - %message%n
+zulu-time=%date{yyyy-MM-dd'T'HH:mm:ss.SSS'Z',UTC}
+editor-link=%class.%method\\(%file:%line\\)
+
+standard=${zulu-time} %level [%thread] [${editor-link}] %logger - %message%n
