Add relevant reference.

--- a/logging/src/main/resources/osi-logback-styles.properties
+++ b/logging/src/main/resources/osi-logback-styles.properties
@@ -4,7 +4,9 @@
 # Please see https://github.com/binkley/binkley/blob/master/LICENSE.md.
 #
 
-zulu-time=%date{yyyy-MM-dd'T'HH:mm:ss.SSS'Z',UTC}
+# See http://xkcd.com/1179/
+# Variables
+zulu-timestamp=%date{yyyy-MM-dd'T'HH:mm:ss.SSS'Z',UTC}
 editor-link=%class.%method\\(%file:%line\\)
-
-standard=${zulu-time} %level [%thread] [${editor-link}] %logger - %message%n
+# Styles
+standard=${zulu-timestamp} %level [%thread] [${editor-link}] %logger - %message%n
