--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,8 @@
         <guava.version>16.0-rc1</guava.version>
         <guice.version>3.0</guice.version>
         <hamcrest.version>1.3</hamcrest.version>
-        <java.version>1.8</java.version>
+        <!-- TODO: Merge Eight branch when JDK8 releases -->
+        <java.version>1.7</java.version>
         <jnr.version>3.0.1</jnr.version>
         <jopt-simple.version>4.6-SNAPSHOT</jopt-simple.version>
         <jsr305.version>2.0.3</jsr305.version>
@@ -289,9 +290,10 @@
                     <detectLinks>true</detectLinks>
                     <linksource>true</linksource>
                     <links>
-                        <link>http://google-guice.googlecode.com/git/javadoc/</link>
-                        <link>http://docs.guava-libraries.googlecode.com/git/javadoc/</link>
-                        <link>http://owner.newinstance.it/latest/apidocs/</link>
+                        <!-- TODO: These guys need complex URLs which javadoc does not grok -->
+                        <!--<link>http://google-guice.googlecode.com/git/javadoc/</link>-->
+                        <!--<link>http://docs.guava-libraries.googlecode.com/git/javadoc/</link>-->
+                        <link>http://owner.newinstance.it/${owner.version}/apidocs/</link>
                         <link>http://slf4j.org/api/</link>
                         <link>http://pholser.github.io/jopt-simple/apidocs/</link>
                         <link>http://findbugs.sourceforge.net/api/</link>
@@ -321,7 +323,7 @@
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
-                        <phase>verify</phase>
+                        <phase>deploy</phase>
                         <goals>
                             <goal>sign</goal>
                         </goals>
