--- a/mixin/pom.xml
+++ b/mixin/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>hm.binkley</groupId>
         <artifactId>binkley-blog</artifactId>
-        <version>0.1-SNAPSHOT</version>
+        <version>0.1</version>
     </parent>
 
     <artifactId>binkley-mixin</artifactId>
