--- a/logging/pom.xml
+++ b/logging/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>hm.binkley</groupId>
         <artifactId>binkley-blog</artifactId>
-        <version>0.1</version>
+        <version>0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>binkley-logging</artifactId>
