Alternative to inject service modules.

--- a/guice/pom.xml
+++ b/guice/pom.xml
@@ -33,6 +33,10 @@
         </dependency>
         -->
         <dependency>
+            <groupId>hm.binkley</groupId>
+            <artifactId>service-binder</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.kohsuke.metainf-services</groupId>
             <artifactId>metainf-services</artifactId>
         </dependency>
