Fix refreshLogback; clean up docs.

--- a/logging/src/main/resources/osi-logback-styles.properties
+++ b/logging/src/main/resources/osi-logback-styles.properties
@@ -7,6 +7,8 @@
 # See http://xkcd.com/1179/
 # Variables
 zulu-timestamp=%date{yyyy-MM-dd'T'HH:mm:ss.SSS'Z',UTC}
+# For handling ALERT/AUDIT specially:
+mark-or-level=%match{WITH_MARKER,%marker/%level,%level}
 editor-link=%class.%method\\(%file:%line\\)
 # Styles
-standard=${zulu-timestamp} %level [%thread] [${editor-link}] %logger - %message%n
+standard=${zulu-timestamp} ${mark-or-level} [%thread] [${editor-link}] %logger - %message%n
